# rust-async-graphql-api

./: .gitignore  Cargo.toml  README.md  setting.toml
src/: main.rs
src/config/: mod.rs
src/controllers/: index.rs
src/graphql/: mod.rs
src/graphql/schemas/: mutation.rs  query.rs
src/models/: mod.rs
src/service/: upload.rs
