[package]
name = "rust-async-graphql-api"
version = "0.1.0"
authors = ["John <john.zhao@scrumcn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "1.13.1"
async-graphql-actix-web = "1.13.1"
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-cors = "0.2.0"
thiserror = "1.0"
serde_json = "1.0"
futures = "0.3.4"
